--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm start",
+    "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
